--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -1,51 +1,72 @@
 <div class="field">
   <label>Customize Badge Layout</label>
 </div>
-<div class="ui stackable grid">
+<div class="ui unstackable grid">
   <div class="five column row">
-    <div class="center aligned column labels">Field</div>
-    <div class="center aligned column labels">Font<br>
-      <div class="ui checkbox">
-        {{input name="fonttypeall" type="checkbox" checked=fonttypeall}}
-        <label>Apply to all</label>
+    <div class="center aligned column">
+      Field Type
+    </div>
+    <div class="center aligned column">
+      Font Type
+    </div>
+    <div class="center aligned column">
+      Font Color
+    </div>
+    <div class="center aligned column">
+      Font Size
+    </div>
+    <div>
+    </div>
+  </div>
+  <div class="five column row">
+    <div class="center aligned column labels"></div>
+    <div class="center aligned column labels">
+      <div class="field">
+        <div class="ui checkbox">
+          {{input name="fonttypeall" type="checkbox" checked=fonttypeall}}
+          <label>Apply to all</label>
+        </div>
       </div>
     </div>
-    <div class="center aligned column">Font Color<br>
-      <div class="ui checkbox">
-        {{input name="fontcolall" type="checkbox" checked=fontcolall}}
-        <label>Apply to all</label>
+    <div class="center aligned column">
+      <div class="field">
+        <div class="ui checkbox">
+          {{input name="fontcolall" type="checkbox" checked=fontcolall}}
+          <label>Apply to all</label>
+        </div>
       </div>
     </div>
-    <div class="center aligned column">Font Size<br>
-      <div class="ui checkbox">
-        {{input name="fontsizeall" type="checkbox" checked=fontsizeall}}
-        <label>Apply to all</label>
+    <div class="center aligned column">
+      <div class="field">
+        <div class="ui checkbox">
+          {{input name="fontsizeall" type="checkbox" checked=fontsizeall}}
+          <label>Apply to all</label>
+        </div>
       </div>
     </div>
     <div class="center aligned column">Adjust long content to width automatically</div>
   </div>
-
   <div class="five column row">
     <div class="center aligned column labels">First Name</div>
-    <div class="center aligned column    ">
+    <div class="center aligned column">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected=fonttype1  onChange=(action (mut fonttype1))}}
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+            <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+            <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+            <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+            <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+            <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+            <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+            <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+            <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
           </div>
         {{/ui-dropdown}}
       </div>
     </div>
-     <div class="center aligned column ">
+    <div class="center aligned column ">
       <div class="one wide column">
         {{col-pick-input value=fontcol1 onChange=(action (mut fontcol1)) }}
       </div>
@@ -53,19 +74,19 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" selected=font1 onChange=(action (mut font1))}}
-        <div class="default text">10</div>
-        <i class="dropdown icon"></i>
-        <div class="menu">
-          <div class="item" data-item="7">7</div>
-          <div class="item" data-item="8">8</div>
-          <div class="item" data-item="9">9</div>
-          <div class="item" data-item="10">10</div>
-          <div class="item" data-item="11">11</div>
-          <div class="item" data-item="12">12</div>
-          <div class="item" data-item="13">13</div>
-          <div class="item" data-item="14">14</div>
-          <div class="item" data-item="15">15</div>
-        </div>
+          <div class="default text">10</div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <div class="item" data-item="7">7</div>
+            <div class="item" data-item="8">8</div>
+            <div class="item" data-item="9">9</div>
+            <div class="item" data-item="10">10</div>
+            <div class="item" data-item="11">11</div>
+            <div class="item" data-item="12">12</div>
+            <div class="item" data-item="13">13</div>
+            <div class="item" data-item="14">14</div>
+            <div class="item" data-item="15">15</div>
+          </div>
         {{/ui-dropdown}}
       </div>
     </div>
@@ -85,14 +106,14 @@
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+            <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+            <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+            <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+            <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+            <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+            <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+            <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+            <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
           </div>
         {{/ui-dropdown}}
       </div>
@@ -105,19 +126,19 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" selected=font2 onChange=(action (mut font2))}}
-        <div class="default text">10</div>
-        <i class="dropdown icon"></i>
-        <div class="menu">
-          <div class="item" data-item="7">7</div>
-          <div class="item" data-item="8">8</div>
-          <div class="item" data-item="9">9</div>
-          <div class="item" data-item="10">10</div>
-          <div class="item" data-item="11">11</div>
-          <div class="item" data-item="12">12</div>
-          <div class="item" data-item="13">13</div>
-          <div class="item" data-item="14">14</div>
-          <div class="item" data-item="15">15</div>
-        </div>
+          <div class="default text">10</div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <div class="item" data-item="7">7</div>
+            <div class="item" data-item="8">8</div>
+            <div class="item" data-item="9">9</div>
+            <div class="item" data-item="10">10</div>
+            <div class="item" data-item="11">11</div>
+            <div class="item" data-item="12">12</div>
+            <div class="item" data-item="13">13</div>
+            <div class="item" data-item="14">14</div>
+            <div class="item" data-item="15">15</div>
+          </div>
         {{/ui-dropdown}}
       </div>
     </div>
@@ -137,14 +158,14 @@
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+            <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+            <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+            <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+            <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+            <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+            <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+            <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+            <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
           </div>
         {{/ui-dropdown}}
       </div>
@@ -157,23 +178,22 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" selected=font3 onChange=(action (mut font3))}}
-        <div class="default text">10</div>
-        <i class="dropdown icon"></i>
-        <div class="menu">
-          <div class="item" data-item="7">7</div>
-          <div class="item" data-item="8">8</div>
-          <div class="item" data-item="9">9</div>
-          <div class="item" data-item="10">10</div>
-          <div class="item" data-item="11">11</div>
-          <div class="item" data-item="12">12</div>
-          <div class="item" data-item="13">13</div>
-          <div class="item" data-item="14">14</div>
-          <div class="item" data-item="15">15</div>
-        </div>
+          <div class="default text">10</div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <div class="item" data-item="7">7</div>
+            <div class="item" data-item="8">8</div>
+            <div class="item" data-item="9">9</div>
+            <div class="item" data-item="10">10</div>
+            <div class="item" data-item="11">11</div>
+            <div class="item" data-item="12">12</div>
+            <div class="item" data-item="13">13</div>
+            <div class="item" data-item="14">14</div>
+            <div class="item" data-item="15">15</div>
+          </div>
         {{/ui-dropdown}}
       </div>
     </div>
-
     <div class="center aligned column">
       <div class="ui toggle checkbox">
         <input name="public" type="checkbox" checked="checked">
@@ -181,7 +201,6 @@
       </div>
     </div>
   </div>
-
   <div class="five column row">
     <div class="center aligned column labels">Organization</div>
     <div class="center aligned column  ">
@@ -190,19 +209,19 @@
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+            <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+            <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+            <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+            <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+            <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+            <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+            <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+            <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
           </div>
         {{/ui-dropdown}}
       </div>
     </div>
-     <div class="center aligned column ">
+    <div class="center aligned column ">
       <div class="one wide column">
         {{col-pick-input value=fontcol4 onChange=(action (mut fontcol4)) }}
       </div>
@@ -210,19 +229,19 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" selected=font4 onChange=(action (mut font4))}}
-        <div class="default text">10</div>
-        <i class="dropdown icon"></i>
-        <div class="menu">
-          <div class="item" data-item="7">7</div>
-          <div class="item" data-item="8">8</div>
-          <div class="item" data-item="9">9</div>
-          <div class="item" data-item="10">10</div>
-          <div class="item" data-item="11">11</div>
-          <div class="item" data-item="12">12</div>
-          <div class="item" data-item="13">13</div>
-          <div class="item" data-item="14">14</div>
-          <div class="item" data-item="15">15</div>
-        </div>
+          <div class="default text">10</div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <div class="item" data-item="7">7</div>
+            <div class="item" data-item="8">8</div>
+            <div class="item" data-item="9">9</div>
+            <div class="item" data-item="10">10</div>
+            <div class="item" data-item="11">11</div>
+            <div class="item" data-item="12">12</div>
+            <div class="item" data-item="13">13</div>
+            <div class="item" data-item="14">14</div>
+            <div class="item" data-item="15">15</div>
+          </div>
         {{/ui-dropdown}}
       </div>
     </div>
@@ -242,14 +261,14 @@
           <div class="default text">Helvetica</div>
           <i class="dropdown icon"></i>
           <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+            <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+            <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+            <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+            <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+            <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+            <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+            <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+            <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
           </div>
         {{/ui-dropdown}}
       </div>
@@ -261,20 +280,20 @@
     </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
-        {{#ui-dropdown class="selection" selected=font5 onChange=(action (mut font5))}}
-        <div class="default text">10</div>
-        <i class="dropdown icon"></i>
-        <div class="menu">
-          <div class="item" data-item="7">7</div>
-          <div class="item" data-item="8">8</div>
-          <div class="item" data-item="9">9</div>
-          <div class="item" data-item="10">10</div>
-          <div class="item" data-item="11">11</div>
-          <div class="item" data-item="12">12</div>
-          <div class="item" data-item="13">13</div>
-          <div class="item" data-item="14">14</div>
-          <div class="item" data-item="15">15</div>
-        </div>
+          {{#ui-dropdown class="selection" selected=font5 onChange=(action (mut font5))}}
+          <div class="default text">10</div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            <div class="item" data-item="7">7</div>
+            <div class="item" data-item="8">8</div>
+            <div class="item" data-item="9">9</div>
+            <div class="item" data-item="10">10</div>
+            <div class="item" data-item="11">11</div>
+            <div class="item" data-item="12">12</div>
+            <div class="item" data-item="13">13</div>
+            <div class="item" data-item="14">14</div>
+            <div class="item" data-item="15">15</div>
+          </div>
         {{/ui-dropdown}}
       </div>
     </div>
